Changes done in grid

--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
 
 	<body>
 		<main class="container">
-			<header>
-				<h1>Reliable, efficient delivery</h1>
-				<p class="fourcard_intro">
-					<span class="power">
-						Powered by Technology
-					</span>
-				</p>
-			</header>
-			<!-- Para - 1 -->
-			<p class="ai">
+			<h1>Reliable, efficient delivery
+				<strong class="power">
+					Powered by Technology
+				</strong>
+			</h1>
+			<h4 class="ai">
 				Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful
-			</p>
-			<!-- Para - 1 end-->
+			</h4>
 
 			<!-- Card Container -->
 			<div class="cards-container">
@@ -32,56 +27,56 @@
 				
 				<!-- Supervisor -->
 				<div class="card-supervisor">
-					<p class="details">
-						<span class="name">Supervisor</span>
-						<div class="card-para">
+					<section class="details">
+						<h2 class="name">Supervisor</h2>
+						<h4 class="card-para">
 							Monitors activity to identify project roadblocks
-						</div>
-					</p>
+						</h4>
+					</section>
 					<div class="img">
-						<img src="images/icon-supervisor.svg" alt="An eye in center of a  magnifying glass">
+						<img src="images/icon-supervisor.svg" alt="">
 					</div>
 				</div>
 				<!-- Supervisor ends -->
 
 				<!-- Team Builder -->
 				<div class="card-team-builder">
-					<p class="details">
-						<span class="team-builder">Team Builder</span>
-						<div class="card-para">
+					<section class="details">
+						<h2 class="team-builder">Team Builder</h2>
+						<h4 class="card-para">
 							Scans our talent network to create the optimal team for your project
-						</div>
-					</p>
+						</h4>
+					</section>
 					<div class="img">
-						<img src="images/icon-team-builder.svg" alt="A house in front of a webpage">
+						<img src="images/icon-team-builder.svg" alt="">
 					</div>
 				</div>
 				<!-- Team Builder ends -->
 
 				<!-- Karma -->
 				<div class="card-karma">
-					<p class="details">
-						<span class="karma">Karma</span>
-						<div class="card-para">
+					<section class="details">
+						<h2 class="karma">Karma</h2>
+						<h4 class="card-para">
 							Regularly evaluates our talent to ensure quality
-						</div>
-					</p>
+						</h4>
+					</section>
 					<div class="img">
-						<img src="images/icon-karma.svg" alt="A gear symbol inside a yellow glowing bulb">
+						<img src="images/icon-karma.svg" alt="">
 					</div>
 				</div>
 				<!-- Karma ends -->
 
 				<!-- Calc -->
 				<div class="card-calc">
-					<p class="details">
-						<span class="calc">Calculator</span>
-						<div class="card-para">
+					<section class="details">
+						<h2 class="calc">Calculator</h2>
+						<h4 class="card-para">
 							Uses data from past projects to provide better delivery estimates
-						</div>
-					</p>
+						</h4>
+					</section>
 					<div class="img">
-						<img src="images/icon-calculator.svg" alt="A computer displaying a graph and a pie chart">
+						<img src="images/icon-calculator.svg" alt="">
 					</div>
 				</div>
 				<!-- Calc ends -->
